# chat-with-pdf

./: .cursorrules  .gitignore  API_ENDPOINTS_REFERENCE.md  COMPREHENSIVE_TESTING.md  INGESTION_EXPLAINED.md  LAMBDA_WEBHOOK_EXPLAINED.md  MILESTONE4_EXPLAINED.md  MILESTONE4_TESTING.md  MODEL_ACCESS_GUIDE.md  OPENAI_MODEL_ISSUE.md  README.md  SETUP_INSTRUCTIONS.md  SWAGGER_UI_TESTING.md  TESTING_GUIDE.md  TEST_RESULTS.md  UPSTASH_SETUP_VERIFICATION.md  WORKING_WITHOUT_LAMBDA.md  assignment_requirements.md  check_available_models.py  config.py  database.py  lambda_function.py  main.py  pyproject.toml  requirements.txt  reset_file_status.py  technical-setup.md  test_chat_endpoints.py  test_endpoints.sh  test_ingestion.py  test_openai_models.py  test_samplepdf.sh  test_upstash_connection.py  test_upstash_direct.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: __init__.py
api/routes/: chat_router.py  file_router.py  retrieve_router.py  webhook_router.py
api/schemas/: __init__.py  request.py  response.py
core/: __init__.py
core/aws/: __init__.py  s3_client.py
core/chunker/: __init__.py  text_chunker.py
core/embeddings/: __init__.py
core/openai/: __init__.py  openai_client.py
core/parsers/: __init__.py  pdf_parser.py
core/utils/: __init__.py
core/vector/: __init__.py  upstash_client.py
dao/: __init__.py  base_dao.py  chat_dao.py  file_dao.py
dao/models/: __init__.py  base.py  conversation.py  file.py  message.py
docs/: ARCHITECTURE.md  DEVELOPMENT_LOG.md
services/chat_service/: __init__.py  chat_handler.py
types/: __init__.py
(+4 files in other folders)
