[tool.poetry]
name = "godwin-j-chat-with-pdf"
version = "0.1.0"
description = "Hybrid-Inline PDF + RAG Chat System"
authors = ["Godwin J <godwin-j@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.31.0"
greenlet = ">=1.0.0"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
boto3 = "^1.29.7"
openai = "^1.3.7"
upstash-vector = "^0.1.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pypdf2 = "3.0.1"
pymupdf = "^1.26.6"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

